Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.2(EOL), 11.4, 11.6(EOL), 11.7(EOL)
-
None
Description
--source include/have_innodb.inc
|
 |
SET SQL_MODE=''; |
BINLOG ' SOgWTg8BAAAAbgAAAHIAAAAAAAQANS42LjMtbTUtZGVidWctbG9nAAAAAAAAAAAAAAAAAAAAAAAA AAAAAAAAAAAAAAAAAABI6BZOEzgNAAgAEgAEBAQEEgAAVgAEGggAAAAICAgCAAAAAAVAYI8='; |
CREATE TABLE t1 (i INT,g GEOMETRY NOT NULL,SPATIAL INDEX (g)) ENGINE=InnoDB; |
CREATE TEMPORARY TABLE t1 (a INT KEY) ENGINE=InnoDB; |
INSERT INTO t1 VALUES (1); |
--error ER_DUP_ENTRY
|
INSERT INTO t1 VALUES (1); |
DROP TEMPORARY TABLE IF EXISTS t1; |
BINLOG ' SVtYRxMBAAAAKQAAADQBAAAAABAAAAAAAAAABHRlc3QAAnQxAAEDAAE=SVtYRxcBAAAAIgAAAFYBAAAQABAAAAAAAAEAAf /+ AgAAAA=='; |
Leads to:
|
CS 10.5.27 be164fc401343ed81b9ebd1f6a3cbb31e364a016 (Debug) |
Core was generated by `/test/MD270924-mariadb-10.5.27-linux-x86_64-dbg/bin/mariadbd --no-defaults --ma'.
|
Program terminated with signal SIGSEGV, Segmentation fault.
|
#0 dict_table_get_next_index (index=0x0)at /test/10.5_dbg/storage/innobase/include/dict0dict.inl:239
|
[Current thread is 1 (Thread 0x152284f53700 (LWP 3215162))]
|
(gdb) bt
|
#0 dict_table_get_next_index (index=0x0) at /test/10.5_dbg/storage/innobase/include/dict0dict.inl:239
|
#1 innobase_get_mysql_key_number_for_index (index=0x15224c0230e8, ib_table=<optimized out>, table=<optimized out>) at /test/10.5_dbg/storage/innobase/handler/ha_innodb.cc:14185
|
#2 ha_innobase::info_low (this=0x15224c02d4d0, flag=34, is_analyze=is_analyze@entry=false) at /test/10.5_dbg/storage/innobase/handler/ha_innodb.cc:14680
|
#3 0x000056413ad927a0 in ha_innobase::info (this=<optimized out>, flag=<optimized out>) at /test/10.5_dbg/storage/innobase/handler/ha_innodb.cc:14711
|
#4 0x000056413a9d3a0e in handler::get_dup_key (this=0x15224c02d4d0, error=error@entry=158) at /test/10.5_dbg/sql/handler.cc:4593
|
#5 0x000056413ab606a9 in Rows_log_event::write_row (this=this@entry=0x15224c029ea8, rgi=rgi@entry=0x15224c020540, overwrite=false) at /test/10.5_dbg/sql/log_event_server.cc:7387
|
#6 0x000056413ab6093c in Write_rows_log_event::do_exec_row (this=0x15224c029ea8, rgi=0x15224c020540) at /test/10.5_dbg/sql/log_event_server.cc:7640
|
#7 0x000056413ab5280f in Rows_log_event::do_apply_event (this=0x15224c029ea8, rgi=0x15224c020540) at /test/10.5_dbg/sql/log_event_server.cc:5770
|
#8 0x000056413a825dcd in Log_event::apply_event (rgi=0x15224c020540, this=0x15224c029ea8) at /test/10.5_dbg/sql/log_event.h:1495
|
#9 mysql_client_binlog_statement (thd=thd@entry=0x15224c000d48) at /test/10.5_dbg/sql/sql_binlog.cc:357
|
#10 0x000056413a7079d9 in mysql_execute_command (thd=thd@entry=0x15224c000d48) at /test/10.5_dbg/sql/sql_parse.cc:6094
|
#11 0x000056413a6ee552 in mysql_parse (thd=thd@entry=0x15224c000d48, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x152284f522c0, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_dbg/sql/sql_parse.cc:8236
|
#12 0x000056413a6fd297 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x15224c000d48, packet=packet@entry=0x15224c00aa19 "BINLOG ' SVtYRxMBAAAAKQAAADQBAAAAABAAAAAAAAAABHRlc3QAAnQxAAEDAAE=SVtYRxcBAAAAIgAAAFYBAAAQABAAAAAAAAEAAf /+ AgAAAA=='", packet_length=packet_length@entry=116, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_dbg/sql/sql_class.h:1329
|
#13 0x000056413a6fffd0 in do_command (thd=0x15224c000d48) at /test/10.5_dbg/sql/sql_parse.cc:1376
|
#14 0x000056413a84d905 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x56413ef4b078, put_in_cache=put_in_cache@entry=true) at /test/10.5_dbg/sql/sql_connect.cc:1417
|
#15 0x000056413a84dfab in handle_one_connection (arg=arg@entry=0x56413ef4b078) at /test/10.5_dbg/sql/sql_connect.cc:1319
|
#16 0x000056413accf289 in pfs_spawn_thread (arg=0x56413e41c778) at /test/10.5_dbg/storage/perfschema/pfs.cc:2201
|
#17 0x000015229cb74609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#18 0x000015229c760133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.5.27 (dbg), 10.5.27 (opt), 10.6.20 (dbg), 10.6.20 (opt), 10.11.10 (dbg), 10.11.10 (opt), 11.1.7 (dbg), 11.1.7 (opt), 11.2.6 (dbg), 11.2.6 (opt), 11.4.4 (dbg), 11.4.4 (opt), 11.6.2 (dbg), 11.6.2 (opt), 11.7.0 (dbg), 11.7.0 (opt)